--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,93 @@
 annotated-types==0.6.0
 anyio==4.2.0
+appdirs==1.4.4
+arrow==1.2.2
+asgiref==3.3.1
+autopep8==1.6.0
+beautifulsoup4==4.12.2
+cachetools==5.4.0
+certifi==2021.10.8
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==2.0.9
 click==8.1.7
 colorama==0.4.6
+cryptography==40.0.2
+cycler==0.10.0
+distlib==0.3.4
+Django==3.0.8
+djangorestframework==3.11.0
 exceptiongroup==1.2.0
-fastapi==0.109.2
+fastapi==0.112.1
+filelock==3.4.2
+frozendict==2.3.7
+google-api-core==2.19.1
+google-api-python-client==2.141.0
+google-auth==2.33.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.63.2
+greenlet==3.0.3
+gunicorn==20.0.4
 h11==0.14.0
-httptools==0.6.1
+html5lib==1.1
+httplib2==0.22.0
 idna==3.6
+Jinja2==3.0.3
+kiwisolver==1.3.1
+lxml==4.9.2
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+mplfinance==0.12.7a17
+multitasking==0.0.11
+mysqlclient==2.1.0
+numpy==1.21.1
+oauth2client==4.1.3
+oauthlib==3.2.2
+pandas==1.3.0
+pandas-datareader==0.10.0
+Pillow==8.3.1
+pipenv==2021.11.23
+platformdirs==2.4.1
+proto-plus==1.24.0
+protobuf==5.27.3
+psycopg2==2.8.6
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycodestyle==2.8.0
+pycparser==2.21
 pydantic==2.6.1
-pydantic-core==2.16.2
-python-dotenv==1.0.1
-PyYAML==6.0.1
+pydantic_core==2.16.2
+PyJWT==2.6.0
+pyparsing==2.4.7
+python-dateutil==2.8.2
+python-slugify==6.1.2
+pytube==12.1.2
+pytz==2023.3
+pywin32==306
+requests==2.26.0
+requests-oauthlib==2.0.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
-starlette==0.36.3
-typing-extensions==4.9.0
-uvicorn==0.27.1
+soupsieve==2.4.1
+SQLAlchemy==2.0.32
+sqlparse==0.4.2
+starlette==0.38.2
+tabulate==0.8.9
+text-unidecode==1.3
+toml==0.10.2
+traitlets==5.9.0
+typing_extensions==4.9.0
+uritemplate==4.1.1
+urllib3==1.26.7
+uvicorn==0.30.6
+vboxapi==1.0
+virtualenv==20.12.1
+virtualenv-clone==0.5.7
 watchfiles==0.21.0
+wcwidth==0.2.6
+webencodings==0.5.1
 websockets==12.0
+yfinance==0.2.18
+zipp==3.16.2
